# chess

./: .gitignore  AGENTS.md  Cargo.toml  README.md  client.toml.example  relay.toml.example
assets/: README.md
assets/fonts/: README.md
certs/: gen-dev-cert.sh
crates/chess-ai/: Cargo.toml
crates/chess-ai/src/: book.rs  endgame.rs  eval.rs  lib.rs  search.rs  tt.rs  uci.rs
crates/chess-app/: Cargo.toml
crates/chess-app/src/: achievements.rs  ai_bridge.rs  ai_difficulty_scaling.rs  ai_personality.rs  analysis_mode.rs  analytics.rs  animation.rs  app_state.rs  arrow_annotation.rs  async_runtime.rs  auto_flip.rs  autosave.rs  blindfold.rs  board_arrow_drawing.rs  board_color.rs  board_coordinate_display.rs  board_editor.rs  board_highlight_last_move.rs  board_perspective.rs  board_rotation_view.rs  board_scaling.rs  board_theme.rs  board_theme_selector.rs  board_view.rs  captured_tray.rs  chinese_notation.rs  clipboard.rs  clock_alarm.rs  clock_ui.rs  comments_panel.rs  confirm_resign.rs  coord_style.rs  coordinate_highlight.rs  daily_puzzle.rs  difficulty_dialog.rs  drag.rs  endgame_puzzle_gen.rs  endgame_tablebase2.rs  endgame_training.rs  endgame_training_mode.rs  (+110 more)
crates/chess-core/: Cargo.toml
crates/chess-core/src/: board.rs  clock.rs  fen.rs  game.rs  lib.rs  moves.rs  notation.rs  pgn.rs  piece.rs  square.rs  zobrist.rs
crates/chess-core/src/tests/: mod.rs
crates/chess-net/: Cargo.toml
crates/chess-net/src/: connection.rs  crypto.rs  lib.rs  protocol.rs  relay.rs  session.rs
crates/chess-relay/: Cargo.toml
crates/chess-relay/src/: config.rs  lib.rs  main.rs  room.rs  tls.rs
crates/chess-relay/tests/: relay_e2e.rs
docs/: ARCHITECTURE.md  RELAY.md  RELEASE.md  RULES.md
engines/: README.md
macos/: Info.plist  build-dmg.sh  make-icon.sh
scripts/: build-release.sh  subset_fonts.py
