[workspace]
resolver = "2"
members = [
    "crates/chess-core",
    "crates/chess-ai",
    "crates/chess-net",
    "crates/chess-app",
    "crates/chess-relay",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Chess Project"]

[workspace.dependencies]
chess-core = { path = "crates/chess-core" }
chess-ai = { path = "crates/chess-ai" }
chess-net = { path = "crates/chess-net" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# --- networking / relay (rustls + ring backend for static, OpenSSL-free builds) ---
tokio-tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pemfile = "2"
webpki-roots = "1"
argon2 = "0.5"
getrandom = "0.4"
futures-util = "0.3"
toml = "1"
crossbeam-channel = "0.5"

# Release profile tuned for the AI search hot path.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
