[package]
name = "chess-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chess-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
