[package]
name = "chess-core"
description = "Chinese Chess (Xiangqi) rules engine: board, move generation, full competition rules."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
