[package]
name = "chess-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chess-core = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
