[package]
name = "chess-net"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chess-core = { workspace = true, features = ["serde"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# Symmetric encryption keyed by the room password (RustCrypto, MIT/Apache-2.0).
chacha20poly1305 = "0.10"
sha2 = "0.10"
base64 = "0.22"
